[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://LevelMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/CookieSpritebig.png" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://PausePanel.gd" type="Script" id=5]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.842529, 1.0733, 0, 0, 0, 0, 1022.16, -0.287079, 0, 0, 0, 0, 1020.8, 596.917, 0, 0, 0, 0, -2.20291, 595.557, 0, 0, 0, 0, -0.842529, 1.0733 )
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 114.058, 13.4603 )

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = null

[node name="MobTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="3"]

position = Vector2( 156.897, 290.443 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="4"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( -0.842529, 1.0733 )
rotation = -0.00132979
scale = Vector2( 2, 1e-05 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="LevelMap" parent="." index="5" instance=ExtResource( 2 )]

[node name="EndPosition" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="EndPosition" index="0"]

position = Vector2( 880.058, 452.331 )
scale = Vector2( 0.0790723, 0.0833476 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndPosition" index="1"]

position = Vector2( 879.975, 451.999 )
scale = Vector2( 0.204519, 1.65752 )
shape = SubResource( 2 )

[node name="Player" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 191.777, 259.279 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="PausePanel" type="Panel" parent="." index="8"]

pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -63.5
margin_right = 142.0
margin_bottom = 63.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Pause" ]

[node name="PauseLabel" type="Label" parent="PausePanel" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -49.5
margin_bottom = 1.5
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Paused"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GUI" parent="." index="9" instance=ExtResource( 6 )]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="body_entered" from="EndPosition" to="." method="_on_EndPosition_body_entered"]


